# vue-cli-plugin-holochain-app-simple

./: README.md  package.json
generator/: index.js
generator/templates/simple/: Procfile  procfile
generator/templates/simple/dna/simple/: Cargo.toml
generator/templates/simple/dna/simple/simple.dna.workdir/: dna.json
generator/templates/simple/dna/simple/tests/: package.json
generator/templates/simple/dna/simple/tests/src/: index.ts
generator/templates/simple/dna/simple/tests/src/thing/: index.ts
generator/templates/simple/dna/simple/zomes/simple/: Cargo.toml
generator/templates/simple/dna/simple/zomes/simple/src/: entries.rs  error.rs  lib.rs
generator/templates/simple/dna/simple/zomes/simple/src/entries/thing/: handlers.rs  mod.rs
generator/templates/simple/src/: App.vue
generator/templates/simple/src/layouts/basic/: Index.vue  View.vue
generator/templates/simple/src/plugins/: vuetify.js
generator/templates/simple/src/router/: index.js
generator/templates/simple/src/router/routes/: index.js  public.routes.js  simple.routes.js
generator/templates/simple/src/store/: index.js
generator/templates/simple/src/store/modules/: index.js  simple.store.js
generator/templates/simple/src/views/home/: Index.vue
generator/templates/simple/src/views/things/: Index.vue
