[package]
name = "simple"
version = "0.0.1"
authors = [ "philip.beadle@holo.host", "lisa.jetton@holo.host" ]
edition = "2018"

[lib]
name = "simple"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk3 = { git = "https://github.com/holochain/holochain.git", branch = "develop" }
serde = "=1.0.104"
chrono = { version = "0.4", features = ['alloc', 'std']}
derive_more = "0.99.9"
thiserror = "1.0.20"
